--- a/src/components/dashboard/live-users-globe.css
+++ b/src/components/dashboard/live-users-globe.css
@@ -22,3 +22,10 @@
 .mapboxgl-ctrl-logo {
   display: none !important;
 }
+
+.mapboxgl-ctrl .mapboxgl-ctrl-attrib {
+  display: none !important;
+}
+.mapboxgl-ctrl-attrib {
+  display: none !important;
+}
